added meta tag description and keywords
SEO Optimization

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width" />
-	<title>antónio regadas</title>
-
+  <meta name="description" content="António Regadas, UI/UX Designer and Developer">
+	<title>António Regadas</title>
+  <meta name="keywords" content="antonio, regadas, responsive, mobile, ui, ux, ui design, ux design, ui/ux design, developer, web developer, programação web, web design">
   <link rel="António Regadas" href="humans.txt" />
 
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900,700' rel='stylesheet' type='text/css'>
