--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<link rel="stylesheet" href="css/normalize.css" />
 	<link rel="stylesheet" href="css/foundation.css" />
-  <link rel="stylesheet" href="css/font-awesome.min.css" />
+  	<link rel="stylesheet" href="css/font-awesome.min.css" />
 	<link rel="stylesheet" href="css/main.css" />
 
 	<script src="js/vendor/custom.modernizr.js"></script>
@@ -34,6 +34,7 @@
       <ul>
         <li><a href="#" id="about" data-reveal-id="aboutMe">About</a></li>
         <li><a href="#" data-tooltip class="has-tip tip-bottom" title="In developing process, champ!">Work</a></li>
+        <li><a href="http://apr-journal.rhcloud.com/" data-tooltip class="has-tip tip-bottom" title="Check my blog">Blog</a></li>
         <li><a data-tooltip class="has-tip tip-bottom" title="Awesome contact form coming soon." href="mailto:apregadas@gmail.com">Contact</a></li>
       </ul>
     </div>
