--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width" />
-	<title>antónio regadas</title>
+<meta name="description" content="I am a talented UI web developer and this is my personal page showing my work process, what i do as well as my web programming and social skills." />
+<meta name="keywords" content="responsive, design, UI, web, developer, process, work, skills, antónio, regadas"/>
+<title>António Regadas</title>
+  
+  <link rel="author" href="http://apr-journal.rhcloud.com/" />
 
   <link rel="António Regadas" href="humans.txt" />
 
@@ -149,8 +153,8 @@
             <h3 class="footer-title">Contact me</h3>
             <p>Do you like this site? Want to get in touch with me?<br/>
               Check my social profile in:<br/>
-              <a href="#" target="_blank"><i class="icon-chevron-right"></i> LinkedIn</a><br/>
-              <a href="#" target="_blank"><i class="icon-chevron-right"></i> Benhance</a><br/>
+              <a href="http://apr-journal.rhcloud.com/" target="_blank"><i class="icon-chevron-right"></i> Web Journal</a><br/>
+              <a href="http://stackoverflow.com/users/2551223/antonio-regadas" target="_blank"><i class="icon-chevron-right"></i> StackOverflow</a><br/>
               <a href="https://github.com/zone-live"><i class="icon-chevron-right"></i> GitHub</a><br/>
               <a href="mailto:apregadas@gmail.com"><i class="icon-chevron-right"></i> Email</a>
             </p>
