--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
             <h3 class="footer-title">Contact me</h3>
             <p>Do you like this site? Want to get in touch with me?<br/>
               Check my social profile in:<br/>
-              <a href="#" target="_blank"><i class="icon-chevron-right"></i> LinkedIn</a><br/>
-              <a href="#" target="_blank"><i class="icon-chevron-right"></i> Benhance</a><br/>
+              <a href="http://apr-journal.rhcloud.com/" target="_blank"><i class="icon-chevron-right"></i> Web Journal</a><br/>
+              <a href="http://stackoverflow.com/users/2551223/antonio-regadas" target="_blank"><i class="icon-chevron-right"></i> StackOverflow</a><br/>
               <a href="https://github.com/zone-live"><i class="icon-chevron-right"></i> GitHub</a><br/>
               <a href="mailto:apregadas@gmail.com"><i class="icon-chevron-right"></i> Email</a>
             </p>
