--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<div class="large-8 columns">
 				<h4>Web development</h4>
 				<p>Functional, aesthetic and user-friendly web interfaces that respond to the latest web standards.</p>
-        <p>We charm the web with beauty and usability.  Creating experiences from full-featured websites to iPhone & iPad optimized compliments, by deploying all the right detail in the right places while leaving the unnecessary behind. We love and understand the web.</p>
+        <p>I create experiences from full-featured websites to iPhone & iPad optimized solutions, by deploying all the right detail in the right places while leaving the unnecessary behind.</p>
 			</div>
 
 <hr>
@@ -95,7 +95,7 @@
 			</div>
 			<div class="large-8 columns">
 				<h4>Mobile Web</h4>
-				<p>Most of the apps I build are proprietary – meaning I can’t share them with you here. I can provide references upon request.</p>
+				<p>The apps i build are proprietary – meaning i can’t share them with you here. I can provide references upon request.</p>
 			</div>
 
 <hr>
