--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width" />
   <meta name="description" content="António Regadas, UI/UX Designer and Developer">
-	<title>António Regadas</title>
+<title>António Regadas</title>
+  
+  <link rel="author" href="http://apr-journal.rhcloud.com/" />
   <meta name="keywords" content="antonio, regadas, responsive, mobile, ui, ux, ui design, ux design, ui/ux design, developer, web developer, programação web, web design">
   <link rel="António Regadas" href="humans.txt" />
 
