--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
             <h3 class="footer-title">Contact me</h3>
             <p>Do you like this site? Want to get in touch with me?<br/>
               Check my social profile in:<br/>
+              <a href="http://careers.stackoverflow.com/antonioregadas"><i class="icon-chevron-right"></i> Curriculum Vitae</a>
               <a href="http://apr-journal.rhcloud.com/" target="_blank"><i class="icon-chevron-right"></i> Web Journal</a><br/>
               <a href="http://stackoverflow.com/users/2551223/antonio-regadas" target="_blank"><i class="icon-chevron-right"></i> StackOverflow</a><br/>
               <a href="https://github.com/zone-live"><i class="icon-chevron-right"></i> GitHub</a><br/>
