--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="António Regadas, UI/UX Designer and Developer">
 <title>António Regadas</title>
   
-  <link rel="author" href="http://apr-journal.rhcloud.com/" />
+  <link rel="author" href="https://plus.google.com/110012602677767302178/posts" />
   <meta name="keywords" content="antonio, regadas, responsive, mobile, ui, ux, ui design, ux design, ui/ux design, developer, web developer, programação web, web design">
   <link rel="António Regadas" href="humans.txt" />
 
