--- a/index.html
+++ b/index.html
@@ -4,20 +4,10 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width" />
-<<<<<<< HEAD
+<title>António Regadas</title>
 <meta name="description" content="I am a talented UI web developer and this is my personal page showing my work process, what i do as well as my web programming and social skills." />
-<meta name="keywords" content="responsive, design, UI, web, developer, process, work, skills, antónio, regadas"/>
-<title>António Regadas</title>
-  
-  <link rel="author" href="http://apr-journal.rhcloud.com/" />
-
-=======
-  <meta name="description" content="António Regadas, UI/UX Designer and Developer">
-<title>António Regadas</title>
-  
   <link rel="author" href="https://plus.google.com/110012602677767302178/posts" />
   <meta name="keywords" content="antonio, regadas, responsive, mobile, ui, ux, ui design, ux design, ui/ux design, developer, web developer, programação web, web design">
->>>>>>> origin/gh-pages
   <link rel="António Regadas" href="humans.txt" />
 
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900,700' rel='stylesheet' type='text/css'>
@@ -45,13 +35,9 @@
       <h3>{ AR }</h3>
       <ul>
         <li><a href="#" id="about" data-reveal-id="aboutMe">About</a></li>
-<<<<<<< HEAD
-        <li><a href="#" data-tooltip class="has-tip tip-bottom" title="In developing process, champ!">Work</a></li>
         <li><a href="http://apr-journal.rhcloud.com/" data-tooltip class="has-tip tip-bottom" title="Check my blog">Blog</a></li>
-=======
         <li><a href="http://aprworkshop-journal.rhcloud.com/" target="_blank" data-tooltip class="has-tip tip-bottom" title="In developing process, champ!">Work</a></li>
->>>>>>> origin/gh-pages
-        <li><a data-tooltip class="has-tip tip-bottom" title="Awesome contact form coming soon." href="mailto:apregadas@gmail.com">Contact</a></li>
+        <li><a href="mailto:apregadas@gmail.com">Contact</a></li>
       </ul>
     </div>
   </header>
