--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
       <h3>{ AR }</h3>
       <ul>
         <li><a href="#" id="about" data-reveal-id="aboutMe">About</a></li>
+        <li><a href="http://apr-journal.rhcloud.com/" data-tooltip class="has-tip tip-bottom" title="Check my blog">Blog</a></li>
         <li><a href="http://aprworkshop-journal.rhcloud.com/" target="_blank" data-tooltip class="has-tip tip-bottom" title="In developing process, champ!">Work</a></li>
-        <li><a data-tooltip class="has-tip tip-bottom" title="Awesome contact form coming soon." href="mailto:apregadas@gmail.com">Contact</a></li>
+        <li><a href="mailto:apregadas@gmail.com">Contact</a></li>
       </ul>
     </div>
   </header>
