--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width" />
   <meta name="description" content="António Regadas, UI/UX Designer and Developer">
+  <meta name="google-site-verification" content="sjiQJJn9zpGfgfzx87DSabFlhXUyzwbxVmuBFb9VL5I" />
 <title>António Regadas</title>
   
   <link rel="author" href="https://plus.google.com/110012602677767302178/posts" />
