--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width" />
+	<meta name="google-site-verification" content="sjiQJJn9zpGfgfzx87DSabFlhXUyzwbxVmuBFb9VL5I" />
 <title>António Regadas</title>
 <meta name="description" content="I am a talented UI web developer and this is my personal page showing my work process, what i do as well as my web programming and social skills." />
   <link rel="author" href="https://plus.google.com/110012602677767302178/posts" />
